# yew-bootstrap-starter

./: Cargo.toml  Makefile.toml
src/: content.rs  lib.rs  navigation.rs
static/: index.html
