[package]
name = "yew-bootstrap-starter"
version = "0.1.0"
authors = ["Richard <ricards.kuodis@lmt.lv>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.70"
yew = "0.17"

[lib]
crate-type = ["cdylib", "rlib"]